# decky-wine-manager

./: .envrc  .gitignore  .gitmodules  README.md  devshell.toml  flake.nix  justfile  lib  main.py  package-lock.json  package.json  plugin.json  pnpm-lock.yaml  rollup.config.js  vendor
assets/: styles.css
backend/: Cargo.toml
backend/src/: compat_tool.rs  main.rs  queue.rs  vdf.rs  ws.rs
backend/src/tools/: mod.rs  protonge.rs
backend/tests/: integration_tests.rs
defaults/lib/: manager.py  protonge.py
lib/: manager.py  protonge.py
src/: InstallRelease.tsx  ManageRelease.tsx  ReleaseList.tsx  Spinner.tsx  context.tsx  hooks.tsx  index.tsx  proton.tsx
