[package]
name = "proton-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.62"
octocrab = "0.18.1"
anyhow = "1.0.68"
bytes = "*"
async-compression = { version = "0.3.15", features = ["futures-io", "gzip"] }
async-tar = "0.4.2"
rocket_anyhow = "0.1.1"
